// Vitest Snapshot v1

exports[`Checkbox > :props > :checked 1`] = `
<label
  class="t-checkbox t-is-checked"
  tabindex="0"
>
  <input
    class="t-checkbox__former"
    tabindex="-1"
    type="checkbox"
    value=""
  />
  <span
    class="t-checkbox__input"
  />
  <span
    class="t-checkbox__label"
  />
</label>
`;

exports[`Checkbox > :props > :defaultChecked 1`] = `
<label
  class="t-checkbox t-is-checked"
  tabindex="0"
>
  <input
    class="t-checkbox__former"
    tabindex="-1"
    type="checkbox"
    value=""
  />
  <span
    class="t-checkbox__input"
  />
  <span
    class="t-checkbox__label"
  />
</label>
`;

exports[`Checkbox > :props > :disabled 1`] = `
<label
  class="t-checkbox t-is-disabled"
>
  <input
    class="t-checkbox__former"
    disabled="disabled"
    tabindex="-1"
    type="checkbox"
    value=""
  />
  <span
    class="t-checkbox__input"
  />
  <span
    class="t-checkbox__label"
  />
</label>
`;

exports[`Checkbox > :props > :indeterminate 1`] = `
<label
  class="t-checkbox t-is-indeterminate"
  tabindex="0"
>
  <input
    class="t-checkbox__former"
    indeterminate="indeterminate"
    tabindex="-1"
    type="checkbox"
    value=""
  />
  <span
    class="t-checkbox__input"
  />
  <span
    class="t-checkbox__label"
  />
</label>
`;

exports[`Checkbox > :props > :name 1`] = `
<label
  class="t-checkbox"
  tabindex="0"
>
  <input
    class="t-checkbox__former"
    name="checkbox-name"
    tabindex="-1"
    type="checkbox"
    value=""
  />
  <span
    class="t-checkbox__input"
  />
  <span
    class="t-checkbox__label"
  />
</label>
`;

exports[`Checkbox CheckboxGroup > :props > :checked 1`] = `
<div
  aria-label="checkbox-group"
  checked="checked"
  class="t-checkbox-group"
  role="group"
>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox t-is-disabled"
  >
    <input
      class="t-checkbox__former"
      disabled="disabled"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;

exports[`Checkbox CheckboxGroup > :props > :defaultChecked 1`] = `
<div
  aria-label="checkbox-group"
  class="t-checkbox-group"
  defaultchecked="sz"
  role="group"
>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox t-is-disabled"
  >
    <input
      class="t-checkbox__former"
      disabled="disabled"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;

exports[`Checkbox CheckboxGroup > :props > :disabled 1`] = `
<div
  aria-label="checkbox-group"
  class="t-checkbox-group"
  role="group"
>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="bj"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      北京
    </span>
  </label>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;

exports[`Checkbox CheckboxGroup > :props > :max 1`] = `
<div
  aria-label="checkbox-group"
  class="t-checkbox-group"
  role="group"
>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="bj"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      北京
    </span>
  </label>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;

exports[`Checkbox CheckboxGroup > :props > :name 1`] = `
<div
  aria-label="checkbox-group"
  class="t-checkbox-group"
  role="group"
>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox t-is-disabled"
  >
    <input
      class="t-checkbox__former"
      disabled="disabled"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;

exports[`Checkbox CheckboxGroup > :props > :options 1`] = `
<div
  aria-label="checkbox-group"
  class="t-checkbox-group"
  role="group"
>
  <label
    class="t-checkbox t-is-disabled"
  >
    <input
      class="t-checkbox__former"
      disabled="disabled"
      tabindex="-1"
      type="checkbox"
      value="gz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      广州
    </span>
  </label>
  <label
    class="t-checkbox"
    tabindex="0"
  >
    <input
      class="t-checkbox__former"
      tabindex="-1"
      type="checkbox"
      value="sz"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      深圳
    </span>
  </label>
</div>
`;
